deploy: 8c013404e6bdc78d8e49295fcc265422500c17d7

--- a/coverage.html
+++ b/coverage.html
@@ -289,6 +289,138 @@
         <tr class="good">
             <td>
                 <!-- miscellaneous -->
+                <a href="./components/EntityDetailsColumnEditorComponent.html">lib/src/components/entity/src/details/column-editor/entity-details-column-editor.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>EntityDetailsColumnEditorComponent</td>
+            <td align="right" data-sort="57">
+                <span class="coverage-percent">57 %</span>
+                <span class="coverage-count">(4/7)</span>
+            </td>
+        </tr>
+        <tr class="medium">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/EntityDetailsComponent.html">lib/src/components/entity/src/details/entity-details.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>EntityDetailsComponent</td>
+            <td align="right" data-sort="50">
+                <span class="coverage-percent">50 %</span>
+                <span class="coverage-count">(3/6)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/functions.html#createColumnForm">lib/src/components/entity/src/details/entity-details.constants.ts</a>
+            </td>
+            <td>function</td>
+            <td>createColumnForm</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(1/1)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/functions.html#createTabForm">lib/src/components/entity/src/details/entity-details.constants.ts</a>
+            </td>
+            <td>function</td>
+            <td>createTabForm</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(1/1)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/functions.html#createTargetForm">lib/src/components/entity/src/details/entity-details.constants.ts</a>
+            </td>
+            <td>function</td>
+            <td>createTargetForm</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(1/1)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/functions.html#handleJsonColumn">lib/src/components/entity/src/details/entity-details.constants.ts</a>
+            </td>
+            <td>function</td>
+            <td>handleJsonColumn</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(1/1)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#PreloaderCn">lib/src/components/entity/src/details/entity-details.constants.ts</a>
+            </td>
+            <td>variable</td>
+            <td>PreloaderCn</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(1/1)</span>
+            </td>
+        </tr>
+        <tr class="good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/EntityDetailsViewModel.html">lib/src/components/entity/src/details/entity-details.view-model.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>EntityDetailsViewModel</td>
+            <td align="right" data-sort="59">
+                <span class="coverage-percent">59 %</span>
+                <span class="coverage-count">(13/22)</span>
+            </td>
+        </tr>
+        <tr class="medium">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/EntityComponent.html">lib/src/components/entity/src/entity.component.ts</a>
+            </td>
+            <td>component</td>
+            <td>EntityComponent</td>
+            <td align="right" data-sort="41">
+                <span class="coverage-percent">41 %</span>
+                <span class="coverage-count">(5/12)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#PreloaderCn">lib/src/components/entity/src/entity.constants.ts</a>
+            </td>
+            <td>variable</td>
+            <td>PreloaderCn</td>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(1/1)</span>
+            </td>
+        </tr>
+        <tr class="medium">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/TargetForm.html">lib/src/components/entity/src/entity.types.ts</a>
+            </td>
+            <td>interface</td>
+            <td>TargetForm</td>
+            <td align="right" data-sort="50">
+                <span class="coverage-percent">50 %</span>
+                <span class="coverage-count">(1/2)</span>
+            </td>
+        </tr>
+        <tr class="good">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./injectables/CachedExplorerService.html">lib/src/components/explorer/src/cached-explorer.service.ts</a>
             </td>
             <td>injectable</td>
@@ -1292,138 +1424,6 @@
             <td align="right" data-sort="50">
                 <span class="coverage-percent">50 %</span>
                 <span class="coverage-count">(2/4)</span>
-            </td>
-        </tr>
-        <tr class="good">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./components/ObjectDetailsColumnEditorComponent.html">lib/src/components/object/src/details/column-editor/object-details-column-editor.component.ts</a>
-            </td>
-            <td>component</td>
-            <td>ObjectDetailsColumnEditorComponent</td>
-            <td align="right" data-sort="57">
-                <span class="coverage-percent">57 %</span>
-                <span class="coverage-count">(4/7)</span>
-            </td>
-        </tr>
-        <tr class="medium">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./components/ObjectDetailsComponent.html">lib/src/components/object/src/details/object-details.component.ts</a>
-            </td>
-            <td>component</td>
-            <td>ObjectDetailsComponent</td>
-            <td align="right" data-sort="50">
-                <span class="coverage-percent">50 %</span>
-                <span class="coverage-count">(3/6)</span>
-            </td>
-        </tr>
-        <tr class="very-good">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./miscellaneous/functions.html#createColumnForm">lib/src/components/object/src/details/object-details.constants.ts</a>
-            </td>
-            <td>function</td>
-            <td>createColumnForm</td>
-            <td align="right" data-sort="100">
-                <span class="coverage-percent">100 %</span>
-                <span class="coverage-count">(1/1)</span>
-            </td>
-        </tr>
-        <tr class="very-good">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./miscellaneous/functions.html#createTabForm">lib/src/components/object/src/details/object-details.constants.ts</a>
-            </td>
-            <td>function</td>
-            <td>createTabForm</td>
-            <td align="right" data-sort="100">
-                <span class="coverage-percent">100 %</span>
-                <span class="coverage-count">(1/1)</span>
-            </td>
-        </tr>
-        <tr class="very-good">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./miscellaneous/functions.html#createTargetForm">lib/src/components/object/src/details/object-details.constants.ts</a>
-            </td>
-            <td>function</td>
-            <td>createTargetForm</td>
-            <td align="right" data-sort="100">
-                <span class="coverage-percent">100 %</span>
-                <span class="coverage-count">(1/1)</span>
-            </td>
-        </tr>
-        <tr class="very-good">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./miscellaneous/functions.html#handleJsonColumn">lib/src/components/object/src/details/object-details.constants.ts</a>
-            </td>
-            <td>function</td>
-            <td>handleJsonColumn</td>
-            <td align="right" data-sort="100">
-                <span class="coverage-percent">100 %</span>
-                <span class="coverage-count">(1/1)</span>
-            </td>
-        </tr>
-        <tr class="very-good">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./miscellaneous/variables.html#PreloaderCn">lib/src/components/object/src/details/object-details.constants.ts</a>
-            </td>
-            <td>variable</td>
-            <td>PreloaderCn</td>
-            <td align="right" data-sort="100">
-                <span class="coverage-percent">100 %</span>
-                <span class="coverage-count">(1/1)</span>
-            </td>
-        </tr>
-        <tr class="good">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./injectables/ObjectDetailsViewModel.html">lib/src/components/object/src/details/object-details.view-model.ts</a>
-            </td>
-            <td>injectable</td>
-            <td>ObjectDetailsViewModel</td>
-            <td align="right" data-sort="59">
-                <span class="coverage-percent">59 %</span>
-                <span class="coverage-count">(13/22)</span>
-            </td>
-        </tr>
-        <tr class="medium">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./components/ObjectComponent.html">lib/src/components/object/src/object.component.ts</a>
-            </td>
-            <td>component</td>
-            <td>ObjectComponent</td>
-            <td align="right" data-sort="41">
-                <span class="coverage-percent">41 %</span>
-                <span class="coverage-count">(5/12)</span>
-            </td>
-        </tr>
-        <tr class="very-good">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./miscellaneous/variables.html#PreloaderCn">lib/src/components/object/src/object.constants.ts</a>
-            </td>
-            <td>variable</td>
-            <td>PreloaderCn</td>
-            <td align="right" data-sort="100">
-                <span class="coverage-percent">100 %</span>
-                <span class="coverage-count">(1/1)</span>
-            </td>
-        </tr>
-        <tr class="medium">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./interfaces/TargetForm.html">lib/src/components/object/src/object.types.ts</a>
-            </td>
-            <td>interface</td>
-            <td>TargetForm</td>
-            <td align="right" data-sort="50">
-                <span class="coverage-percent">50 %</span>
-                <span class="coverage-count">(1/2)</span>
             </td>
         </tr>
         <tr class="medium">
