--- a/injectables/EntityDetailsViewModel.html
+++ b/injectables/EntityDetailsViewModel.html
@@ -91,7 +91,7 @@
 
 <ol class="breadcrumb">
   <li class="breadcrumb-item">Injectables</li>
-  <li class="breadcrumb-item" >ObjectDetailsViewModel</li>
+  <li class="breadcrumb-item" >EntityDetailsViewModel</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -115,7 +115,7 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>lib/src/components/object/src/details/object-details.view-model.ts</code>
+            <code>lib/src/components/entity/src/details/entity-details.view-model.ts</code>
         </p>
 
 
@@ -123,7 +123,7 @@
                 <h3>Description</h3>
             </p>
             <p class="comment">
-                <p>ViewModel for managing the details of an object.</p>
+                <p>ViewModel for managing the details of an entity.</p>
 
             </p>
 
@@ -293,7 +293,7 @@
                     <tr>
                         <td class="col-md-4">
                             <div class="io-line">Defined in <a href="" data-line="187"
-                                    class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:187</a></div>
+                                    class="link-to-prism">lib/src/components/entity/src/details/entity-details.view-model.ts:187</a></div>
                         </td>
                     </tr>
 
@@ -332,7 +332,7 @@
                     <tr>
                         <td class="col-md-4">
                             <div class="io-line">Defined in <a href="" data-line="99"
-                                    class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:99</a></div>
+                                    class="link-to-prism">lib/src/components/entity/src/details/entity-details.view-model.ts:99</a></div>
                         </td>
                     </tr>
 
@@ -406,7 +406,7 @@
                     <tr>
                         <td class="col-md-4">
                             <div class="io-line">Defined in <a href="" data-line="135"
-                                    class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:135</a></div>
+                                    class="link-to-prism">lib/src/components/entity/src/details/entity-details.view-model.ts:135</a></div>
                         </td>
                     </tr>
 
@@ -445,7 +445,7 @@
                     <tr>
                         <td class="col-md-4">
                             <div class="io-line">Defined in <a href="" data-line="223"
-                                    class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:223</a></div>
+                                    class="link-to-prism">lib/src/components/entity/src/details/entity-details.view-model.ts:223</a></div>
                         </td>
                     </tr>
 
@@ -519,7 +519,7 @@
                     <tr>
                         <td class="col-md-4">
                             <div class="io-line">Defined in <a href="" data-line="107"
-                                    class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:107</a></div>
+                                    class="link-to-prism">lib/src/components/entity/src/details/entity-details.view-model.ts:107</a></div>
                         </td>
                     </tr>
 
@@ -593,7 +593,7 @@
                     <tr>
                         <td class="col-md-4">
                             <div class="io-line">Defined in <a href="" data-line="91"
-                                    class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:91</a></div>
+                                    class="link-to-prism">lib/src/components/entity/src/details/entity-details.view-model.ts:91</a></div>
                         </td>
                     </tr>
 
@@ -667,7 +667,7 @@
                     <tr>
                         <td class="col-md-4">
                             <div class="io-line">Defined in <a href="" data-line="164"
-                                    class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:164</a></div>
+                                    class="link-to-prism">lib/src/components/entity/src/details/entity-details.view-model.ts:164</a></div>
                         </td>
                     </tr>
 
@@ -711,7 +711,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:60</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">lib/src/components/entity/src/details/entity-details.view-model.ts:60</a></div>
                         </td>
                     </tr>
 
@@ -738,7 +738,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="53" class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:53</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="53" class="link-to-prism">lib/src/components/entity/src/details/entity-details.view-model.ts:53</a></div>
                         </td>
                     </tr>
 
@@ -765,7 +765,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="57" class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:57</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="57" class="link-to-prism">lib/src/components/entity/src/details/entity-details.view-model.ts:57</a></div>
                         </td>
                     </tr>
 
@@ -792,7 +792,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="55" class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:55</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="55" class="link-to-prism">lib/src/components/entity/src/details/entity-details.view-model.ts:55</a></div>
                         </td>
                     </tr>
 
@@ -819,7 +819,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="52" class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:52</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="52" class="link-to-prism">lib/src/components/entity/src/details/entity-details.view-model.ts:52</a></div>
                         </td>
                     </tr>
 
@@ -846,7 +846,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="56" class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:56</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="56" class="link-to-prism">lib/src/components/entity/src/details/entity-details.view-model.ts:56</a></div>
                         </td>
                     </tr>
 
@@ -880,7 +880,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:66</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">lib/src/components/entity/src/details/entity-details.view-model.ts:66</a></div>
                         </td>
                     </tr>
 
@@ -918,7 +918,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="49" class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:49</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="49" class="link-to-prism">lib/src/components/entity/src/details/entity-details.view-model.ts:49</a></div>
                         </td>
                     </tr>
 
@@ -956,7 +956,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="51" class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:51</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="51" class="link-to-prism">lib/src/components/entity/src/details/entity-details.view-model.ts:51</a></div>
                         </td>
                     </tr>
 
@@ -989,7 +989,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="54" class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:54</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="54" class="link-to-prism">lib/src/components/entity/src/details/entity-details.view-model.ts:54</a></div>
                         </td>
                     </tr>
 
@@ -1016,7 +1016,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="58" class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:58</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="58" class="link-to-prism">lib/src/components/entity/src/details/entity-details.view-model.ts:58</a></div>
                         </td>
                     </tr>
 
@@ -1042,7 +1042,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="64" class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:64</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="64" class="link-to-prism">lib/src/components/entity/src/details/entity-details.view-model.ts:64</a></div>
                         </td>
                     </tr>
 
@@ -1074,7 +1074,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="62" class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:62</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="62" class="link-to-prism">lib/src/components/entity/src/details/entity-details.view-model.ts:62</a></div>
                         </td>
                     </tr>
 
@@ -1107,7 +1107,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="59" class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:59</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="59" class="link-to-prism">lib/src/components/entity/src/details/entity-details.view-model.ts:59</a></div>
                         </td>
                     </tr>
 
@@ -1136,7 +1136,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="75" class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:75</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="75" class="link-to-prism">lib/src/components/entity/src/details/entity-details.view-model.ts:75</a></div>
                                 </td>
                             </tr>
                     <tr>
@@ -1167,7 +1167,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="83" class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:83</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="83" class="link-to-prism">lib/src/components/entity/src/details/entity-details.view-model.ts:83</a></div>
                                 </td>
                             </tr>
                     <tr>
@@ -1194,10 +1194,10 @@ import {TranslocoService} from &quot;@ngneat/transloco&quot;;
 import {throwError} from &quot;rxjs&quot;;
 import {FormControl, FormGroup, Validators} from &quot;@angular/forms&quot;;
 import {catchError} from &quot;rxjs/operators&quot;;
-import {ObjectDetails} from &quot;./object-details.constants&quot;;
+import {EntityDetails} from &quot;./entity-details.constants&quot;;
 import {LocalizePipe} from &quot;../../../../modules/locale&quot;;
 import {Store} from &quot;../../../../modules/store&quot;;
-import {ColumnForm, TabForm} from &quot;../object.types&quot;;
+import {ColumnForm, TabForm} from &quot;../entity.types&quot;;
 import {onlyLatinLettersAndNumbersValidator} from &quot;../../../../global/validator&quot;;
 import {
   ExplorerColumn,
@@ -1208,15 +1208,15 @@ import {
 } from &quot;../../../explorer&quot;;
 import {ToastData, ToastEvent} from &quot;../../../../global/vars&quot;;
 import {usePreloader} from &quot;../../../../modules/preloader/src/use-preloader&quot;;
-import createTargetForm &#x3D; ObjectDetails.createTargetForm;
-import createColumnForm &#x3D; ObjectDetails.createColumnForm;
-import createTabForm &#x3D; ObjectDetails.createTabForm;
+import createTargetForm &#x3D; EntityDetails.createTargetForm;
+import createColumnForm &#x3D; EntityDetails.createColumnForm;
+import createTabForm &#x3D; EntityDetails.createTabForm;
 
 /**
- * ViewModel for managing the details of an object.
+ * ViewModel for managing the details of an entity.
  */
 @Injectable()
-export class ObjectDetailsViewModel {
+export class EntityDetailsViewModel {
 
   /** Key for the new column dialog. */
   readonly newColumnDialogKey &#x3D; &quot;newColumnDialog&quot;;
@@ -1246,7 +1246,7 @@ export class ObjectDetailsViewModel {
    * @returns The preloader channel identifier.
    */
   get preloaderChannel() {
-    return ObjectDetails.PreloaderCn;
+    return EntityDetails.PreloaderCn;
   }
 
   /**
@@ -1394,8 +1394,8 @@ export class ObjectDetailsViewModel {
    * @param colForm The column form to edit.
    */
   openColumnEditor(colForm: FormGroup&lt;ColumnForm&gt;) {
-    import(&quot;./column-editor/object-details-column-editor.component&quot;).then(c &#x3D;&gt; {
-      this.dialogService.open(c.ObjectDetailsColumnEditorComponent, {
+    import(&quot;./column-editor/entity-details-column-editor.component&quot;).then(c &#x3D;&gt; {
+      this.dialogService.open(c.EntityDetailsColumnEditorComponent, {
         header: this.localizePipe.transform(colForm.controls.name.value, colForm.controls.id.value)?.toString(),
         data: colForm,
         resizable: true,
@@ -1452,7 +1452,7 @@ export class ObjectDetailsViewModel {
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'injectable';
-            var COMPODOC_CURRENT_PAGE_URL = 'ObjectDetailsViewModel.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'EntityDetailsViewModel.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
