--- a/miscellaneous/functions.html
+++ b/miscellaneous/functions.html
@@ -115,7 +115,7 @@
                             <a href="#clearSpaces" title="lib/src/global/util/src/string.utils.ts" ><b>clearSpaces</b>&nbsp;&nbsp;&nbsp;(lib/.../string.utils.ts)</a>
                         </li>
                         <li>
-                            <a href="#createColumnForm" title="lib/src/components/object/src/details/object-details.constants.ts" ><b>createColumnForm</b>&nbsp;&nbsp;&nbsp;(lib/.../object-details.constants.ts)</a>
+                            <a href="#createColumnForm" title="lib/src/components/entity/src/details/entity-details.constants.ts" ><b>createColumnForm</b>&nbsp;&nbsp;&nbsp;(lib/.../entity-details.constants.ts)</a>
                         </li>
                         <li>
                             <a href="#createFieldFilterForm" title="lib/src/components/explorer/src/section/filter/section-filter-dialog.constants.ts" ><b>createFieldFilterForm</b>&nbsp;&nbsp;&nbsp;(lib/.../section-filter-dialog.constants.ts)</a>
@@ -136,10 +136,10 @@
                             <a href="#CreateProfileForm" title="lib/src/components/profile/src/profile.constants.ts" ><b>CreateProfileForm</b>&nbsp;&nbsp;&nbsp;(lib/.../profile.constants.ts)</a>
                         </li>
                         <li>
-                            <a href="#createTabForm" title="lib/src/components/object/src/details/object-details.constants.ts" ><b>createTabForm</b>&nbsp;&nbsp;&nbsp;(lib/.../object-details.constants.ts)</a>
+                            <a href="#createTabForm" title="lib/src/components/entity/src/details/entity-details.constants.ts" ><b>createTabForm</b>&nbsp;&nbsp;&nbsp;(lib/.../entity-details.constants.ts)</a>
                         </li>
                         <li>
-                            <a href="#createTargetForm" title="lib/src/components/object/src/details/object-details.constants.ts" ><b>createTargetForm</b>&nbsp;&nbsp;&nbsp;(lib/.../object-details.constants.ts)</a>
+                            <a href="#createTargetForm" title="lib/src/components/entity/src/details/entity-details.constants.ts" ><b>createTargetForm</b>&nbsp;&nbsp;&nbsp;(lib/.../entity-details.constants.ts)</a>
                         </li>
                         <li>
                             <a href="#detectWebpSupportFactory" title="lib/src/global/util/src/media.utils.ts" ><b>detectWebpSupportFactory</b>&nbsp;&nbsp;&nbsp;(lib/.../media.utils.ts)</a>
@@ -157,7 +157,7 @@
                             <a href="#getRandomInt" title="lib/src/global/util/src/number.utils.ts" ><b>getRandomInt</b>&nbsp;&nbsp;&nbsp;(lib/.../number.utils.ts)</a>
                         </li>
                         <li>
-                            <a href="#handleJsonColumn" title="lib/src/components/object/src/details/object-details.constants.ts" ><b>handleJsonColumn</b>&nbsp;&nbsp;&nbsp;(lib/.../object-details.constants.ts)</a>
+                            <a href="#handleJsonColumn" title="lib/src/components/entity/src/details/entity-details.constants.ts" ><b>handleJsonColumn</b>&nbsp;&nbsp;&nbsp;(lib/.../entity-details.constants.ts)</a>
                         </li>
                         <li>
                             <a href="#jsonStringValidator" title="lib/src/global/validator/src/json-string.validator.ts" ><b>jsonStringValidator</b>&nbsp;&nbsp;&nbsp;(lib/.../json-string.validator.ts)</a>
@@ -485,7 +485,7 @@
             </tr>
         </tbody>
     </table>
-</section>    <h3>lib/src/components/object/src/details/object-details.constants.ts</h3>
+</section>    <h3>lib/src/components/entity/src/details/entity-details.constants.ts</h3>
     <section data-compodoc="block-methods">
     <h3></h3>    <table class="table table-sm table-bordered">
         <tbody>
