--- a/miscellaneous/typealiases.html
+++ b/miscellaneous/typealiases.html
@@ -124,13 +124,16 @@
                             <a href="#ColumnDataType" title="lib/src/components/explorer/src/explorer.types.ts" ><b>ColumnDataType</b>&nbsp;&nbsp;&nbsp;(lib/.../explorer.types.ts)</a>
                         </li>
                         <li>
-                            <a href="#ColumnForm" title="lib/src/components/object/src/object.types.ts" ><b>ColumnForm</b>&nbsp;&nbsp;&nbsp;(lib/.../object.types.ts)</a>
+                            <a href="#ColumnForm" title="lib/src/components/entity/src/entity.types.ts" ><b>ColumnForm</b>&nbsp;&nbsp;&nbsp;(lib/.../entity.types.ts)</a>
                         </li>
                         <li>
                             <a href="#ConfigEditorForm" title="lib/src/components/config/src/config.types.ts" ><b>ConfigEditorForm</b>&nbsp;&nbsp;&nbsp;(lib/.../config.types.ts)</a>
                         </li>
                         <li>
                             <a href="#ConfigPropertyEditorResult" title="lib/src/components/config/src/config.types.ts" ><b>ConfigPropertyEditorResult</b>&nbsp;&nbsp;&nbsp;(lib/.../config.types.ts)</a>
+                        </li>
+                        <li>
+                            <a href="#EntityForm" title="lib/src/components/entity/src/entity.types.ts" ><b>EntityForm</b>&nbsp;&nbsp;&nbsp;(lib/.../entity.types.ts)</a>
                         </li>
                         <li>
                             <a href="#Env" title="lib/src/global/vars/src/types.ts" ><b>Env</b>&nbsp;&nbsp;&nbsp;(lib/.../types.ts)</a>
@@ -151,9 +154,6 @@
                             <a href="#MediaTypeVariant" title="lib/src/modules/media/src/media.constants.ts" ><b>MediaTypeVariant</b>&nbsp;&nbsp;&nbsp;(lib/.../media.constants.ts)</a>
                         </li>
                         <li>
-                            <a href="#ObjectForm" title="lib/src/components/object/src/object.types.ts" ><b>ObjectForm</b>&nbsp;&nbsp;&nbsp;(lib/.../object.types.ts)</a>
-                        </li>
-                        <li>
                             <a href="#PlainObject" title="lib/src/global/vars/src/types.ts" ><b>PlainObject</b>&nbsp;&nbsp;&nbsp;(lib/.../types.ts)</a>
                         </li>
                         <li>
@@ -169,7 +169,7 @@
                             <a href="#SystemTheme" title="lib/src/global/vars/src/types.ts" ><b>SystemTheme</b>&nbsp;&nbsp;&nbsp;(lib/.../types.ts)</a>
                         </li>
                         <li>
-                            <a href="#TabForm" title="lib/src/components/object/src/object.types.ts" ><b>TabForm</b>&nbsp;&nbsp;&nbsp;(lib/.../object.types.ts)</a>
+                            <a href="#TabForm" title="lib/src/components/entity/src/entity.types.ts" ><b>TabForm</b>&nbsp;&nbsp;&nbsp;(lib/.../entity.types.ts)</a>
                         </li>
                         <li>
                             <a href="#UserForm" title="lib/src/components/profile/src/profile.types.ts" ><b>UserForm</b>&nbsp;&nbsp;&nbsp;(lib/.../profile.types.ts)</a>
@@ -479,7 +479,7 @@
             </tr>
         </tbody>
     </table>
-</section>    <h3>lib/src/components/object/src/object.types.ts</h3>
+</section>    <h3>lib/src/components/entity/src/entity.types.ts</h3>
     <section data-compodoc="block-typealias">
     <table class="table table-sm table-bordered">
         <tbody>
@@ -507,8 +507,8 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="ObjectForm"></a>
-                    <span class="name "><b>ObjectForm</b><a href="#ObjectForm"><span class="icon ion-ios-link"></span></a></span>
+                    <a name="EntityForm"></a>
+                    <span class="name "><b>EntityForm</b><a href="#EntityForm"><span class="icon ion-ios-link"></span></a></span>
                 </td>
             </tr>
             <tr>
