--- a/miscellaneous/variables.html
+++ b/miscellaneous/variables.html
@@ -157,7 +157,7 @@
                             <a href="#PreloaderCn" title="lib/src/components/config/src/config.constants.ts" ><b>PreloaderCn</b>&nbsp;&nbsp;&nbsp;(lib/.../config.constants.ts)</a>
                         </li>
                         <li>
-                            <a href="#PreloaderCn" title="lib/src/components/object/src/object.constants.ts" ><b>PreloaderCn</b>&nbsp;&nbsp;&nbsp;(lib/.../object.constants.ts)</a>
+                            <a href="#PreloaderCn" title="lib/src/components/entity/src/entity.constants.ts" ><b>PreloaderCn</b>&nbsp;&nbsp;&nbsp;(lib/.../entity.constants.ts)</a>
                         </li>
                         <li>
                             <a href="#PreloaderCn" title="lib/src/components/profile/src/profile.constants.ts" ><b>PreloaderCn</b>&nbsp;&nbsp;&nbsp;(lib/.../profile.constants.ts)</a>
@@ -166,7 +166,7 @@
                             <a href="#PreloaderCn" title="lib/src/components/xdb/src/xdb.constants.ts" ><b>PreloaderCn</b>&nbsp;&nbsp;&nbsp;(lib/.../xdb.constants.ts)</a>
                         </li>
                         <li>
-                            <a href="#PreloaderCn" title="lib/src/components/object/src/details/object-details.constants.ts" ><b>PreloaderCn</b>&nbsp;&nbsp;&nbsp;(lib/.../object-details.constants.ts)</a>
+                            <a href="#PreloaderCn" title="lib/src/components/entity/src/details/entity-details.constants.ts" ><b>PreloaderCn</b>&nbsp;&nbsp;&nbsp;(lib/.../entity-details.constants.ts)</a>
                         </li>
                         <li>
                             <a href="#PreloaderCn" title="lib/src/components/explorer/src/section/filter/section-filter-dialog.constants.ts" ><b>PreloaderCn</b>&nbsp;&nbsp;&nbsp;(lib/.../section-filter-dialog.constants.ts)</a>
@@ -791,7 +791,7 @@
         </tbody>
     </table>
 </section>
-    <h3>lib/src/components/object/src/object.constants.ts</h3>
+    <h3>lib/src/components/entity/src/entity.constants.ts</h3>
     <section data-compodoc="block-properties">
     <h3></h3>    <table class="table table-sm table-bordered">
         <tbody>
@@ -896,7 +896,7 @@
         </tbody>
     </table>
 </section>
-    <h3>lib/src/components/object/src/details/object-details.constants.ts</h3>
+    <h3>lib/src/components/entity/src/details/entity-details.constants.ts</h3>
     <section data-compodoc="block-properties">
     <h3></h3>    <table class="table table-sm table-bordered">
         <tbody>
@@ -917,7 +917,7 @@
                 </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Default value : </i><code>&quot;objects-det-cn&quot;</code>
+                        <i>Default value : </i><code>&quot;entity-det-cn&quot;</code>
                     </td>
                 </tr>
 
