--- a/interfaces/TargetForm.html
+++ b/interfaces/TargetForm.html
@@ -122,7 +122,7 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>lib/src/components/object/src/object.types.ts</code>
+            <code>lib/src/components/entity/src/entity.types.ts</code>
         </p>
 
 
@@ -214,7 +214,7 @@ import { ExplorerColumn, ExplorerTab, ExplorerTarget } from &quot;../../explorer
 /**
  * Form type for an object in the Explorer.
  */
-type ObjectForm &#x3D; {
+type EntityForm &#x3D; {
   [K in keyof ExplorerTarget]: FormControl&lt;ExplorerTarget[K]&gt;;
 }
 
@@ -228,7 +228,7 @@ export type ColumnForm &#x3D; {
 /**
  * Interface for a form representing a target in the Explorer, excluding the columns and actions properties.
  */
-export interface TargetForm extends Omit&lt;ObjectForm, &quot;columns&quot;/* | &quot;actions&quot;*/&gt; {
+export interface TargetForm extends Omit&lt;EntityForm, &quot;columns&quot;&gt; {
   columns: FormArray&lt;FormGroup&lt;ColumnForm&gt;&gt;;
 }
 
